app/assets/stylesheets/components/homepage.scss
.homepage {
  padding: 0px;
  -webkit-transition: 0.25s all ease-in-out;
	-moz-transition: 0.25s all ease-in-out;
	-o-transition: 0.25s all ease-in-out;
	transition: 0.25s all ease-in-out;

  @media (max-height: 730px) {
    .fire-picture {
      -webkit-transition: 0.25s all ease-in-out;
      -moz-transition: 0.25s all ease-in-out;
      -o-transition: 0.25s all ease-in-out;
      transition: 0.25s all ease-in-out;
      opacity: 0.5;
    }
  }
}

.homepage-nav {
  max-width: 1128px;
  margin: auto;
  display: flex;
  align-items: bottom;
  position: relative;
  justify-content: space-between;
  flex-wrap: nowrap;
  padding-top: 11px;
  padding-bottom: 10px;

  @media (max-width: 1160px) {
    padding-top: 8px;
  }
}

.homepage-spacing {
  background-color: transparent;
  height: 16px;
  
  @media (max-width: 1160px) {
    height: 0;
  }
}

.login-logo {
  width: 110px;
  height: 50px;
  @media (max-width: 1160px) {
    // padding: 0 5px;
    max-width: 75px;
    padding-left: 12px;
    padding-right: 12px;
  }
}

.joinnow-nav {
  font-size: 1rem;
  font-weight: 600;
  border-radius: .3em;
  padding: 10.5px 12px;
  text-decoration: none;
  color: rgba(0, 0, 0, 0.6);
  transition-duration: 0.167s;
  transition-property: background-color, box-shadow, color;

  @media (max-width: 1160px) {
    padding: 6.5px 7.5px;
  }
}

.joinnow-nav:hover {
  background-color: rgba(0, 0, 0, 0.08);
  color: rgba(0, 0, 0, 0.9);
  text-decoration: none;
}

.joinnow-nav:active {
  background-color: rgba(0, 0, 0, 0.1);
  outline: 5px auto rgba(0, 150, 255, 1);
  -webkit-outline: 5px auto rgba(0, 150, 255, 1);
  -moz-outline: 5px auto rgba(0, 150, 255, 1);
  -ms-outline: 5px auto rgba(0, 150, 255, 1);
  -o-outline: 5px auto rgba(0, 150, 255, 1);
  /* Use a border to apply the outline */
}

.signin-nav {
  margin-left: 0.5rem;
  color: #0a66c2;
  border-radius: 25px;
  padding: 9.5px 23px;
  margin-right: 16px;
  font-size: 1rem;
  font-weight: 600;
  line-height: 40px;
  text-align: center;
  text-decoration: none;
  transition-duration: 0.167s;
  transition-property: background-color, box-shadow, color;
  background-color: rgba(0, 0, 0, 0);
  border: 1px solid #0a66c2;
  // border-color: rgba(0, 0, 0, 0);
  // border-style: solid;
  // border-width: 1px;

  @media (max-width: 1160px) {
    padding: 5.5px 15px;
    margin-left: 0;
  }
}

.signin-nav:hover {
  background-color: rgba(112,181,249,0.15);
  // background-color: rgba(152,216,244,0.25);
  color: #0a66c2;
  box-shadow: #0a66c2 0px 0px 0px 1px inset;
}

.signin-nav:active {
  background-color: rgba(112, 181, 249, 0.15);
  box-shadow: none;
  color: #0a66c2;
  outline: 5px auto rgba(0, 150, 255, 1);
  -webkit-outline: 5px auto rgba(0, 150, 255, 1);
  -moz-outline: 5px auto rgba(0, 150, 255, 1);
  -ms-outline: 5px auto rgba(0, 150, 255, 1);
  -o-outline: 5px auto rgba(0, 150, 255, 1);
  /* Use a border to apply the outline */
}

.homepage-main {
  display: flex;
  align-content: flex-start;
  min-height: 700px;
  padding-top: 40px;
  padding-bottom: 130px;
  padding: 40px 0;
  position: relative;
  width: 100%;
  max-width: 1128px;
  // align-items: center;
  flex-wrap: wrap;
  margin: auto;

  @media (max-width: 790px) {
    display: flex;
    flex-wrap: wrap;
    margin: auto;
    min-height: 0px;
  }

  @media (max-width: 1160px) {
    width: 93%;
    padding-left: 16px;
    padding-right: 16px;
  }
}

.homepage-main-right {
  width: 40%;
  display: flex;
  justify-content: center;
  align-items: center;
  align-content: center;

  @media (max-width: 790px) {
    width: 100%;
    // flex-direction: column;
    // margin: auto;
    // min-height: 0px;
  }
}

.homepage-text {
  width: 100%;
  font-size: 56px;
  font-weight: 200;
  line-height: 67.2px;
  color: rgb(143, 88, 73);

  @media (max-width: 790px) {
    text-align: center;
    font-size: 32px;
    font-weight: 300;
    width: 100%;
    line-height: 38.4px;
  }
  z-index: 1;
}

.homepage-subtext {
  width: 100%;
  display: flex;
  justify-content: flex-start;
  font-size: 12px;
  color: rgb(143, 88, 73);

  @media (max-width: 790px) {
    justify-content: center;
    padding-bottom: 15px;
  }
}

.homepage-list {
  list-style-type: none;
  display: flex;
  flex-direction: column;
}

.homepage-list-item {
  display: flex;
}

.homepage-card {
  border: 1px solid #efefef;
  color: rgba(0, 0, 0, 0.9);
  border-radius: 8px;
  text-align: left;
  min-height: 27px;
  width: 376px;
  padding: 16px;
  font-size: 20px;
  font-weight: 400;
  line-height: 25px;
  margin-bottom: 16px;
  display: flex;
  justify-content: space-between;

  @media (max-width: 790px) {
    width: 100%;
  }
}

.homepage-card:hover {
  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3);

}

.homepage-list-icon {
  height: 24px;
  width: 24px;
  opacity: 0.6;
}

.homepage-main-left {
  width: 60%;
  align-items: flex-start;
  align-content: flex-start;

  @media (max-width: 790px) {
    width: 100%;
  }
}

.homepage-picture {
  width: 350px;
  @media (max-width: 790px) {
    margin: auto;
    height: 220px;
    min-width: 374px;
    min-height: 0px;
  }
}

.fire-picture {
  width: 100%;
  pointer-events: none;
  position: fixed;
  right: 0%;
  bottom: 0px;


}

.homepage-nav-right {
  @media (max-width: 300px) {
    display: flex;
    flex-direction: column;
  }
}

